Partial_14Dec2021/force-app/main/default/objects/Geo_location_test__c/Geo_location_test__c.object-meta.xml
<CustomObject>
    <label>Geo location test</label>
    <nameField>
        <label>Geo location test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geol location test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>