Partial_14Dec2021/force-app/main/default/objects/Geo_location_test__c/fields/Geo_address_for_save__c.field-meta.xml
<CustomField>
    <fullName>Geo_address_for_save__c</fullName>
    <label>Geo address for save</label>
    <length>255</length>
    <type>Text</type>
</CustomField>