Partial_14Dec2021/force-app/main/default/objects/Geo_location_test__c/fields/Geo_loc_for_save__c.field-meta.xml
<CustomField>
    <fullName>Geo_loc_for_save__c</fullName>
    <label>Geo loc for save</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>