Partial_14Dec2021/force-app/main/default/objects/Geo_location_test__c/fields/Geo_location__c.field-meta.xml
<CustomField>
    <fullName>Geo_location__c</fullName>
    <label>Geo location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>