Partial_14Dec2021/force-app/main/default/objects/Geo_location_test__c/fields/Geo_User_id_1__c.field-meta.xml
<CustomField>
    <fullName>Geo_User_id_1__c</fullName>
    <label>Geo User id 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>